dummy-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-app
  annotations:
    vault.hashicorp.com/agent-inject: "true"
    vault.hashicorp.com/role: "internal-app"
    vault.hashicorp.com/agent-inject-secret-credentials.txt: "secret/data/github/callidusgroupoperator/access_tokens"
spec:
  selector:
    matchLabels:
      app: dummy-app
  template:
    metadata:
      labels:
        app: dummy-app
    spec:
      containers:
        - name: dummy-app
          image: burtlo/devwebapp-ruby:k8s
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
