dummy-app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-app
spec:
  type: ClusterIP
  selector:
    app: dummy-app
  ports:
    - port: 80
      targetPort: 80
      # nodePort: 30003
