dummy-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy-app
  labels:
    name: dummy-app
spec:
  rules:
    - host: dummy.app.csi.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: dummy-app
                port:
                  number: 80
